--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ deploy:
   on:
     branch: master
     password: "Hd0iTbTkoAbpe912n2yFO51wh7X2LlYlk/1Fd2Nj"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
